k8s/admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flixpredix-admin
spec:
  selector:
    app: flixpredix
    service: admin
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
