k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flixpredix-app
spec:
  selector:
    app: flixpredix
    service: app
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
