k8s/server-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: flixpredix-server-lb
spec:
  type: LoadBalancer
  selector:
    app: flixpredix-server
  ports:
  - port: 80
    targetPort: 80
