k8s/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flixpredix-server
spec:
  selector:
    app: flixpredix
    service: server
  ports:
  - port: 80
    targetPort: 80
